<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>
        <variable name="text" type="by.bsuir.polyc_000.mobiledevandroid.models.SharedPreferencesString"/>
    </data>

    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"

        android:orientation="vertical">

        <LinearLayout
            style="@style/ButtonLayout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2">

            <Button
                android:id="@+id/button1"
                style="@style/Button"
                android:layout_weight="5"
                android:text="@string/button1_text"
                android:onClick="onButton1Click"/>

            <Space
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1"/>

            <Button
                android:id="@+id/button2"
                style="@style/Button"
                android:layout_weight="5"
                android:text="@string/button2_text"
                android:onClick="onButton2Click"/>

        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="30dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@{text.value}"
            android:gravity="center_vertical|center_horizontal" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="30dp" />

        <Button
            android:id="@+id/task2Button"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/task2Button_text"
            android:onClick="onTask2ButtonClick"/>

    </LinearLayout>

</layout>

